apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:28.0-jre'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.github.jknack:handlebars:4.1.2'
    implementation 'org.springframework:spring-core:5.1.8.RELEASE'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.1'
    testImplementation 'org.assertj:assertj-core:3.12.2'
    testCompile 'org.mockito:mockito-core:2.+'
    compile 'commons-io:commons-io:2.6'
}